footer and index update
adjustments in images, button uppercase, and footer remodel

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="ps-5 showBanner bannerText">
                 <span><h1><span class="bigus">DISCOVER</span> the</span></h1></span>
                 <span><h1><span class="bigus">MAGIC</span><span> of </span><span class="bigus">MUSIC</span></h1></span><br>
-                <a href="about.html"><button type="submit" class="btn rounded-0 btn-lg btn-outline-light">See More</button></a>
+                <a href="about.html"><button type="submit" class="btn rounded-0 btn-lg btn-outline-light">SEE MORE</button></a>
              </div>
         </div>
     </div>
@@ -118,7 +118,7 @@
             </div>
             <div class="col-lg-7 p-4 pt-lg-5 mt-lg-5 ctnText slidingLeft animate__animated">
                 <div class="ctnBands">
-                    <img src="assets/silent_sanctuary.jpg" class="img-fluid bandsImage bandsImage" alt="">
+                    <img src="assets/silent_sanc.jpg" class="img-fluid bandsImage bandsImage" alt="">
                     <h3 class="pt-4">SILENT SANCTUARY</h3>
                     <p>A rock band that includes violins and a cello. Most people have had mixed reactions to this mixture; some are amazed, some are skeptical, and some are simply curious.</p>
                     <div class="progress" style="height: 1px;">
@@ -162,7 +162,7 @@
             </div>
             <div class="d-flex justify-content-center w-sm-50 order-md-1 ctnText slidingLeft animate__animated">
                 <div>
-                    <div class="d-block d-md-none pt-4"><span><h2>Upcoming Dates: </h2></span></div>
+                    <div class="d-block d-md-none pt-4"><span><h2>Upcoming Dates: <br> BEN & BEN</h2></span></div>
                     <div class="d-flex flex-column flex-md-row me-lg-5 py-4 justify-content-sm-between" id="band-sched" band-name="Ben & Ben">
                         <div><h3>3.25</b></h3></div>
                         <div class="px-md-2 px-lg-5 ">
