--- a/footer.html
+++ b/footer.html
@@ -1,33 +1,36 @@
 <hr class="mt-0">
-<div class="d-flex flex-wrap">
-    <div class="px-4 pt-2 ms-sm-5 ms-lg-0" style="max-width: 500px;">
-        <h4>Subscribe</h4>
-        <p>Don't miss out on exclusive behind-the-scenes access, early demos, live streams and other benefits by subscribing to our newsletter.</p>
-    </div>
-    <div class="px-4 pt-md-2">
-        <form id="form-footer">
-            <div class="mb-3 justify-content-sm-center">
-                <div class="ms-sm-5 ms-lg-0">
-                    <label for="input-email-footer" class="form-label">Email address</label>
-                    <input type="email" class="form-control rounded-0" id="input-email-footer" placeholder="Your email address"><br>
-                    <button type="submit" class="btn rounded-0 btn-outline-light">Submit</button>
+<div class="container-fluid pb-3">
+    <div class="row">
+        <div class="px-4 px-md-5 col-lg-5">
+            <h4>Subscribe</h4>
+            <p>Don't miss out on exclusive behind-the-scenes access, early demos, live streams and other benefits by subscribing to our newsletter.</p>
+        </div>
+        <div class="col-10 px-4 col-sm-5 ps-md-5 col-md-5 col-lg-3">
+            <form id="form-footer">
+                <div class="mb-3 justify-content-sm-center">
+                    <div class="">
+                        <label for="input-email-footer" class="form-label">Email address</label>
+                        <input type="email" class="form-control rounded-0" id="input-email-footer" placeholder="Your email address"><br>
+                        <button type="submit" class="btn rounded-0 btn-outline-light">SUBMIT</button>
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
+        <div class="col-2 col-sm-7 px-md-5 order-md-2 col-md-7 d-lg-none">
+        </div>
+        <div class="p-4 pt-md-0 col-md-7 order-md-1 col-lg-4 ps-lg-5 sm text-center">
+            <h4>Follow Us:</h4>
+            <i class="bi bi-twitter m-2" style="font-size: 40px;"></i>
+            <i class="bi bi-facebook m-2" style="font-size: 40px;"></i>
+            <i class="bi bi-instagram m-2" style="font-size: 40px;"></i>
+        </div>
     </div>
 </div>
     <hr>
-    <div class="d-flex flex-column flex-sm-row pb-3 px-4 ">
-        <div class="d-flex flex-fill pt-md-2 order-2 order-sm-1 justify-content-center justify-content-md-start">
-            <label>powered by <a href="https://kodego.ph/" style="color:#D4ECDD; text-decoration: none;">Kodego.ph</a></label>
-        </div>
-        <div class="d-flex flex-fill order-1 order-sm-2 justify-content-center">
-            <img src="assets/amplifylogo2.png" width=150px height=auto alt="">
-        </div>
-        <div class=" d-flex flex-fill order-3 justify-content-center justify-content-md-end">
-            <i class="bi bi-twitter m-2"></i>
-            <i class="bi bi-facebook m-2"></i>
-            <i class="bi bi-instagram m-2"></i>
+    <div class="container-fluid pb-3">
+        <div class="row">
+            <div class="text-center">
+                <img src="assets/amplifylogo2.png" width=150px height=auto alt="">
+            </div>
         </div>
     </div>
-</div>
