--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <hr class="mt-0">
-<div class="container-fluid pb-3">
+<div class="container-fluid pb-3 pt-3">
     <div class="row">
         <div class="px-4 px-md-5 col-lg-5">
             <h4>Subscribe</h4>
