--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <hr class="mt-0">
-<div class="container-fluid pb-3 pt-3">
+<div class="container-fluid pb-3 pt-3 pe-0">
     <div class="row">
         <div class="px-4 px-md-5 col-lg-5">
             <h4>Subscribe</h4>
@@ -9,17 +9,17 @@
             <form id="form-footer">
                 <div class="mb-3 justify-content-sm-center">
                     <div class="">
-                        <label for="input-email-footer" class="form-label">Email address</label>
+                        <h5 for="input-email-footer" class="form-label">Email address</h5>
                         <input type="email" class="form-control rounded-0" id="input-email-footer" placeholder="Your email address"><br>
                         <button type="submit" class="btn rounded-0 btn-outline-light">SUBMIT</button>
                     </div>
                 </div>
             </form>
         </div>
-        <div class="col-2 col-sm-7 px-md-5 order-md-2 col-md-7 d-lg-none">
+        <div class="col-2 col-sm-7 px-md-3 order-md-2 col-md-7 order-lg-1 col-lg-1">
         </div>
-        <div class="p-4 pt-md-0 col-md-7 order-md-1 col-lg-4 ps-lg-5 sm text-center">
-            <h4>Follow Us:</h4>
+        <div class="p-4 pt-md-0 col-md-7 order-md-1 col-lg-3 order-lg-2 px-lg-0">
+            <h5>Follow Us:</h5>
             <i class="bi bi-twitter m-2" style="font-size: 40px;"></i>
             <i class="bi bi-facebook m-2" style="font-size: 40px;"></i>
             <i class="bi bi-instagram m-2" style="font-size: 40px;"></i>
