--- a/bands.html
+++ b/bands.html
@@ -153,7 +153,7 @@
                                         <div class="card-body">
                                             <h4 class="card-title" style="color: black;">Silent Sanctuary</h4>
                                             <p class="card-text" style="color: black;">Silent Sanctuary is a 5-piece Filipino rock band that was formed in Metro Manila, Philippines in 2001. Five studio albums have been released by the band throughout its career.</p>
-                                            <a href="https://en.wikipedia.org/wiki/Silent_Sanctuary" class="btn btn-primary">Read More</a>
+                                            <a href="https://en.wikipedia.org/wiki/Silent_Sanctuary" class="btn rounded-0 btn-lg btn-outline-dark">Read More</a>
                                         </div>
                              </div>
                         </div>
@@ -163,7 +163,7 @@
                                             <div class="card-body">
                                                 <h4 class="card-title" style="color: black;">Ben And Ben</h4>
                                                 <p class="card-text" style="color: black;">Ben&Ben, are a folk pop/pop rock band in the Philippines. Formed in 2015, the band have since been known for their popular hits that include "Pagtingin" and "Lifetime", among others.</p>
-                                                <a href="https://en.wikipedia.org/wiki/Ben%26Ben" class="btn btn-primary">Read More</a>
+                                                <a href="https://en.wikipedia.org/wiki/Ben%26Ben" class="btn rounded-0 btn-lg btn-outline-dark">Read More</a>
                                             </div>
                                 </div>
                             </div>
@@ -173,7 +173,7 @@
                                         <div class="card-body">
                                             <h4 class="card-title" style="color: black;">Spongecola</h4>
                                             <p class="card-text" style="color: black;">Sponge Cola is a Philippine pop-rock band that has become very successful. They are currently one of the most successful and longest-lived veteran bands that are actively recording and touring.</p>
-                                            <a href="https://en.wikipedia.org/wiki/Sponge_Cola" class="btn btn-primary">Read More</a>
+                                            <a href="https://en.wikipedia.org/wiki/Sponge_Cola" class="btn rounded-0 btn-lg btn-outline-dark">Read More</a>
                                         </div>
                                  </div>
                             </div>
@@ -183,7 +183,7 @@
                                          <div class="card-body">
                                                 <h4 class="card-title" style="color: black;">Join The Club</h4>
                                                 <p class="card-text" style="color: black;">Join the Club is a Filipino alternative rock band formed in 2001, known for their hits such as "Nobela", "Paano Sasabihin" and "Lunes". The band currently consists of Biboy Renia, Congie Lulu, Migs Mendoza, and Mark Garchitorena</p>
-                                                <a href="https://en.wikipedia.org/wiki/Join_the_Club_(band)" class="btn btn-primary">Read More</a>
+                                                <a href="https://en.wikipedia.org/wiki/Join_the_Club_(band)" class="btn rounded-0 btn-lg btn-outline-dark">Read More</a>
                                             </div>
                                         </div>
                                 </div>
@@ -194,7 +194,7 @@
                                                 <h4 class="card-title" style="color: black;">Nobita</h4>
                                                 <p class="card-text" style="color: black;">An Opm Rock band from the Philippines.<br>
                                                  Members :Jaeson Felismino(Vocals/Guitars),Mark Quintero(Bassist),Roman Lester Monegas(Drums) ,Sam Aquino(Lead Guitar) and Richmond Bancolita(keys).</p>
-                                                <a href="https://rakista.com/news/11/1425/nobita-releases-their-latest-single-the-search-is-over" class="btn btn-primary">Read More</a>
+                                                <a href="https://rakista.com/news/11/1425/nobita-releases-their-latest-single-the-search-is-over" class="btn rounded-0 btn-lg btn-outline-dark">Read More</a>
                                             </div>
                                         </div>
                                 </div>
@@ -204,7 +204,7 @@
                                                 <div class="card-body">
                                                     <h4 class="card-title" style="color: black;">Eraserheads</h4>
                                                     <p class="card-text" style="color: black;">The Eraserheads, also popularly known as "Eheads", is a disbanded music group which came into national prominence in the 1990s. They are most remembered through their hit songs “Pare Ko,” and “Ang Huling El Bimbo,” among others.</p>
-                                                    <a href="https://en.wikipilipinas.org/view/Eraserheads" class="btn btn-primary">Read More</a>
+                                                    <a href="https://en.wikipilipinas.org/view/Eraserheads" class="btn rounded-0 btn-lg btn-outline-dark">Read More</a>
                                                 </div>
                                             </div>
                                 </div>
