--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <span class="spanAdjectives">Raucous</span>
                         </div>
                 </div>
-                <p class="pt-md-4">A music company called Ampli.fy manages many bands and events, primarily Philippines local artists. A music company called Ampli.fy manages many bands and events, primarily local artists.</p>
+                <p class="pt-md-4">A music company called Ampli.fy manages many bands and events, primarily Philippines local artists. Ampli.fy will give you an experience that may make you stand out from the crowd!</p>
                 <a href="about.html"><button type="submit" class="btn btn-lg rounded-0 btn-outline-light">SEE MORE</button></a>
             </div>
             <div class="col-lg-7 p-4">
@@ -202,7 +202,7 @@
             <div class="ps-5 showBanner bannerText animate__animated" style="top: 300px;">
                 <span><h1><span style="font-size: 6vw; font-weight: 900;">HEAR THE CROWD!</span></h1></span>
                 <p class="text-justify">If you have any questions or comments, please email us or call 123-456-7890.<br> We would be delighted to answer your questions and arrange a meeting with you.<br> Ampli.fy music can help you stand out from the crowd!</p>
-                <button type="button" class="btn btn-light text-center rounded-0 btn-lg">CONTACT</button>
+                <button type="button" class="btn btn-outline-light text-center rounded-0 btn-lg">CONTACT</button>
             </div>
         </div>
     </div>
@@ -211,7 +211,7 @@
             <div class=" text-center">
                 <span><h1><span style="font-size: 44px; font-weight: 900;">HEAR THE CROWD!</span></h1></span>
                 <p class="text-justify">If you have any questions or comments, please email us or call 123-456-7890. We would be delighted to answer your questions and arrange a meeting with you. Ampli.fy music can help you stand out from the crowd!</p>
-                <button type="button" class="btn btn-light text-center rounded-0 btn-lg">CONTACT</button>
+                <button type="button" class="btn btn-outline-light text-center rounded-0 btn-lg">CONTACT</button>
           </div>
         </div>
     </div>
