update about us text

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
             <img class="image-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px;" src="assets/BANNER3.jpg" alt="">
                 <div id="banner-saying">
                     <div id="absolute">
-                         <span><h1>ABOUT <span class="bigus">US</span></h1></span>
+                         <span><h1><span class="bigus">ABOUT</span> <h1>Us</h1></span>
                     </div>
                 </div> 
         </section>
@@ -155,7 +155,7 @@
             </div>
             </div>
             <!--end dev-->
-            <section  id="reserve" class="container-fluid px-0 w-">
+            <section  id="reserve" class="container-fluid px-0 ">
                 <img class="image-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px ;" src="assets/contact-us.jpg" alt="">
                 <div id="banner-saying">
                     <div id="absolute">
