updated about text

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
             <img class="image-fluid w-100" style="min-height: 584px; object-fit: none; max-height: 585px;" src="assets/BANNER3.jpg" alt="">
                 <div id="banner-saying">
                     <div id="absolute">
-                         <span><h1><span class="bigus">ABOUT</span> <h1>Us</h1></span>
+                        <span><h1><span class="bigus">ABOUT</span> Us<span class="bigus"></span></h1></span>
                     </div>
                 </div> 
         </section>
@@ -101,7 +101,7 @@
                                 </div>
                             </div>
                             <div class="more">
-                                <p style="color: black;">Ut sed consectetur ligula. Aenean id nibh accumsan, pre tium nulla in, lacinia aecenas mollis. Sed mauris at sollicitudin. Etiam maximus mauris vel leo mattis, non venenatis magna finibus vestibulum.</p>
+                                <p style="color: black;">Focuses on the creation of the reservation page and booking page, also creates the header of the ampli.fy page.</p>
                                 <div class="socials">
                                     <a href="#" title="#" class="facebook"><i class="fa fa-facebook"></i></a>
                                     <a href="#" title="#" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -121,7 +121,7 @@
                                 </div>
                             </div>
                             <div class="more">
-                                <p style="color: black;">Ut sed consectetur ligula. Aenean id nibh accumsan, pre tium nulla in, lacinia aecenas mollis. Sed mauris at sollicitudin. Etiam maximus mauris vel leo mattis, non venenatis magna finibus vestibulum.</p>
+                                <p style="color: black;">Focuses on the cretaion of the About page that includes the developers information, also creates the band page of ampli.fy.</p>
                                 <div class="socials">
                                     <a href="#" title="#" class="facebook"><i class="fa fa-facebook"></i></a>
                                     <a href="#" title="#" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -141,7 +141,7 @@
                                 </div>
                             </div>
                             <div class="more">
-                                <p style="color: black;">Ut sed consectetur ligula. Aenean id nibh accumsan, pre tium nulla in, lacinia aecenas mollis. Sed mauris at sollicitudin. Etiam maximus mauris vel leo mattis, non venenatis magna finibus vestibulum.</p>
+                                <p style="color: black;">Focuses on the creation of the Main page or landing page of the site, also creates the footer of the ampli.fy site.</p>
                                 <div class="socials">
                                     <a href="#" title="#" class="facebook"><i class="fa fa-facebook"></i></a>
                                     <a href="#" title="#" class="twitter"><i class="fa fa-twitter"></i></a>
