--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                                 </div>
                             </div>
                             <div class="more">
-                                <p style="color: black;">Focuses on the creation of the reservation page and booking page, also creates the header of the ampli.fy page.</p>
+                                <p style="color: black;">Focuses on the creation of the reservation page and booking page, also creates the navigation bar of the ampli.fy page.</p>
                                 <div class="socials">
                                     <a href="#" title="#" class="facebook"><i class="fa fa-facebook"></i></a>
                                     <a href="#" title="#" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -121,7 +121,7 @@
                                 </div>
                             </div>
                             <div class="more">
-                                <p style="color: black;">Focuses on the cretaion of the About page that includes the developers information, also creates the band page of ampli.fy.</p>
+                                <p style="color: black;">Focuses on the cretaion of the About page that includes the developers information, also creates the band page of ampli.fy and it's logo.</p>
                                 <div class="socials">
                                     <a href="#" title="#" class="facebook"><i class="fa fa-facebook"></i></a>
                                     <a href="#" title="#" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -141,7 +141,7 @@
                                 </div>
                             </div>
                             <div class="more">
-                                <p style="color: black;">Focuses on the creation of the Main page or landing page of the site, also creates the footer of the ampli.fy site.</p>
+                                <p style="color: black;">Focuses on the creation of the Main page or landing page of the site that shows the content of it, also creates the footer of the ampli.fy site.</p>
                                 <div class="socials">
                                     <a href="#" title="#" class="facebook"><i class="fa fa-facebook"></i></a>
                                     <a href="#" title="#" class="twitter"><i class="fa fa-twitter"></i></a>
