--- a/index.html
+++ b/index.html
@@ -157,37 +157,37 @@
     <div class="container">
         <div class="d-md-block d-none pt-4"><span><h2>Upcoming Dates: </h2></span></div>
         <div class="d-flex flex-column flex-md-row justify-content-center justify-content-sm-around slidingRight animate__animated">
-            <div class="d-flex w-sm-100 w-md-50 justify-content-center ps-lg-5 order-md-2">
+            <div class="d-flex w-sm-100 w-md-50 justify-content-center ps-lg-5 order-md-2 benbenImage">
                 <a href="reserve.html"><img id="benben" class="image-fluid w-100" src="assets/ben&ben-min.jpg" alt="benenbenlog"></a>
             </div>
             <div class="d-flex justify-content-center w-sm-50 order-md-1 ctnText slidingLeft animate__animated">
                 <div>
                     <div class="d-block d-md-none pt-4"><span><h2>Upcoming Dates: <br> BEN & BEN</h2></span></div>
-                    <div class="d-flex flex-column flex-md-row me-lg-5 py-4 justify-content-sm-between" id="band-sched" band-name="Ben & Ben">
+                    <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
                         <div><h3>3.25</b></h3></div>
                         <div class="px-md-2 px-lg-5 ">
-                            <div><h4 class="country">Edinbro</h4></div>  
+                            <div><h4 class="country">Manila, PH</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
                         <div><h3>4.01</h3></div>
                         <div class="px-md-2 px-lg-5">
-                            <div><h4 class="country">Edinburgh, UK</h4></div>  
+                            <div><h4 class="country">Cavite, PH</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between" >
                         <div><h3>5.30</h3></div>
                         <div class="px-md-2 px-lg-5">
-                            <div><h4 class="country">Edinburgh, UK</h4></div>  
+                            <div><h4 class="country">Pasay, PH</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row py-4 justify-content-sm-between">
                         <div><h3>6.20</h3></div>
                         <div class="px-md-2 px-lg-5">
-                            <div><h4 class="country">Edinburgh, UK</h4></div>  
+                            <div><h4 class="country">Ilo-ilo, PH</h4></div>  
                             <div class="smol">O2 Academy Edinburgh</div>
                         </div>
                     </div>
