added screen loader

--- a/bands.html
+++ b/bands.html
@@ -16,6 +16,12 @@
     <link rel="icon" href="assets\amplifylogo3.png">
 </head>
 <body>
+    <!--loader-->
+    <div class="overlay"></div>
+    <div class="loader"> 
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
     <!-- navigation -->
     <nav id="navigation" class="navbar navbar-expand-sm sticky-top navbar-dark" style="background-color: #112031;" >
         <div class="container-fluid">
@@ -286,6 +292,7 @@
     </script>
     <script>
       $(document).ready(function(){
+        $.getScript("js/all.js");
         //script for footer email validation
         $.getScript("js/footer.js");
       });
