--- a/about.html
+++ b/about.html
@@ -16,8 +16,13 @@
     <link rel="icon" href="assets\amplifylogo3.png">
 </head>
 <body>
+    <!--loader-->
+    <div class="overlay"></div>
+    <div class="loader"> 
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
     <!-- navigation -->
-
     <nav id="navigation" class="navbar navbar-expand-sm sticky-top navbar-dark" style="background-color: #112031;" >
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img src="assets/amplifylogo2.png" width=150px height=auto
@@ -183,6 +188,7 @@
     </script>
     <script>
         $(document).ready(function(){
+            $.getScript("js/all.js");
             //script for footer email validation
             $.getScript("js/footer.js");
         });
