--- a/booking.html
+++ b/booking.html
@@ -14,6 +14,12 @@
     <link rel="icon" href="assets\amplifylogo3.png">
 </head>
 <body>
+    <!--loader-->
+    <div class="overlay"></div>
+    <div class="loader"> 
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
     <!-- navigation -->
     <nav id="navigation" class="navbar navbar-expand-sm sticky-top navbar-dark" style="background-color: #112031;" >
         <div class="container-fluid">
@@ -141,7 +147,7 @@
             "December"
         ] 
         $(document).ready(function(){
-            
+            $.getScript("js/all.js");
             //get value from previous website using session storage
             var list = JSON.parse(sessionStorage.getItem("info"));
             $(".band-name").text(list.band_name);
