--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,12 @@
     <link rel="icon" href="assets\amplifylogo3.png">
 </head>
 <body>
+    <!--loader-->
+    <div class="overlay"></div>
+    <div class="loader"> 
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
     <!-- navigation -->
     <nav id="navigation" class="navbar navbar-expand-sm sticky-top navbar-dark" style="background-color: #112031;" >
         <div class="container-fluid">
@@ -107,6 +113,7 @@
     </script>
     <script>
         $(document).ready(function(){
+            $.getScript("js/all.js");
             //contact form with email validation
             $("#contact-form").submit(function(e){
                 e.preventDefault();
