--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
                                 </div>
                             </div>
                             <div class="more">
-                                <p style="color: black;">Focuses on the cretaion of the About page that includes the developers information, also creates the band page of ampli.fy and it's logo.</p>
+                                <p style="color: black;">Focuses on the creation of the About page that includes the developers information, also creates the band page of ampli.fy and it's logo.</p>
                                 <div class="socials">
                                     <a href="#" title="#" class="facebook"><i class="fa fa-facebook"></i></a>
                                     <a href="#" title="#" class="twitter"><i class="fa fa-twitter"></i></a>
